update subscription endpoint
